Address additional issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,6 @@ body {
 
 em {
 	padding-left:0.2rem;
-	display:inline;
 }
 
 sup {
@@ -286,12 +285,10 @@ td {
 }
 
 .selected-works-item-subtitle {
-	display:flex;
 	color: var(--accent-color-grey);
 }
 
 .selected-works-item-summary {
-	display:flex;
 }
 
 
